Remove duplicates from arrays, replace null fields

--- a/spec/fixtures/sharepoint_trade_articles/results.yaml
+++ b/spec/fixtures/sharepoint_trade_articles/results.yaml
@@ -35,7 +35,7 @@
     event to reach a target audience of clients, potential business partners or key
     decision-makers in markets around the world.  Request assistance organizing a
     promotional event by contacting your localExport Assistance Center. "
-  :keyword: 
+  :keyword: ''
   :seo_metadata_title: Advertising and Promotional Events for Exporters | Trade.gov
   :seo_metadata_description: Learn about tools to increase your brand awareness and
     market exposure in countries around the world.
@@ -102,7 +102,7 @@
   :creation_date: 
   :release_date: 
   :expiration_date: 
-  :evergreen: 
+  :evergreen: ''
   :content: " ​​U.S. Government advocacy assistance can help U.S. companies overcome
     trade barriers, bureaucratic problems and unfair trading practices; level the
     playing field to ensure that your company has the best possible chance to win
@@ -337,7 +337,7 @@
     all trade leads, leveraging assistance from U.S. Commercial Service staff and/or
     state trade specialists   Go to theexport events calendarto see a complet list
     of trade events, training programs, and webinars. "
-  :keyword: 
+  :keyword: ''
   :seo_metadata_title: Catalog Exhibitions Help Put Your Products on the Map | Trade.gov
   :seo_metadata_description: The U.S. Commercial Service offers convenient, affordable
     ways to stimulate interest in your firm's products and services.
