--- a/spec/fixtures/tariff_rates/australia/results.yaml
+++ b/spec/fixtures/tariff_rates/australia/results.yaml
@@ -31,13 +31,25 @@
   :quota_name: "null"
   :industry: "Agricultural"
   :annual_rates:
-      "y2012": "10"
-      "y2013": "20"
-      "y2014": "30"
+    -
+      - "y2012"
+      - "10"
+    -
+      - "y2013"
+      - "20"
+    -
+      - "y2014"
+      - "30"
   :alt_annual_rates:
-      "alt_2012": "1"
-      "alt_2013": "2"
-      "alt_2014": "3"
+    -
+      - "alt_2012"
+      - "1"
+    -
+      - "alt_2013"
+      - "2"
+    -
+      - "alt_2014"
+      - "3"
   :countries:
     - "US"
     - "AU"
@@ -73,14 +85,26 @@
   :link_url: "null"
   :quota_name: "null"
   :industry: "Agricultural"
-  :annual_rates: 
-     y2012: "null"
-     y2013: "null"
-     y2014: "null"
-  :alt_annual_rates: 
-     alt_2012: "null"
-     alt_2013: "null"
-     alt_2014: "null"
+  :annual_rates:
+    -
+      - "y2012"
+      - "null"
+    -
+      - "y2013"
+      - "null"
+    -
+      - "y2014"
+      - "null"
+  :alt_annual_rates:
+    -
+      - "alt_2012"
+      - "null"
+    -
+      - "alt_2013"
+      - "null"
+    -
+      - "alt_2014"
+      - "null"
   :countries:
     - "US"
     - "AU"
@@ -117,13 +141,25 @@
   :quota_name: "null"
   :industry: "Agricultural"
   :annual_rates:
-    y2012: "null"
-    y2013: "null"
-    y2014: "null"
+    -
+      - "y2012"
+      - "null"
+    -
+      - "y2013"
+      - "null"
+    -
+      - "y2014"
+      - "null"
   :alt_annual_rates:
-    alt_2012: "null"
-    alt_2013: "null"
-    alt_2014: "null"
+    -
+      - "alt_2012"
+      - "null"
+    -
+      - "alt_2013"
+      - "null"
+    -
+      - "alt_2014"
+      - "null"
   :countries:
     - "US"
     - "AU"
