--- a/spec/fixtures/tariff_rates/korea/results.yaml
+++ b/spec/fixtures/tariff_rates/korea/results.yaml
@@ -30,8 +30,26 @@
   :link_url: "null"
   :quota_name: "null"
   :industry: "Agricultural"
-  :annual_rates: {"y2012": "10", "y2013": "20", "y2014": "30"}
-  :alt_annual_rates: {"alt_2012": "1", "alt_2013": "2", "alt_2014": "3"}
+  :annual_rates:
+    -
+      - "y2012"
+      - "10"
+    -
+      - "y2013"
+      - "20"
+    -
+      - "y2014"
+      - "30"
+  :alt_annual_rates:
+    -
+      - "alt_2012"
+      - "1"
+    -
+      - "alt_2013"
+      - "2"
+    -
+      - "alt_2014"
+      - "3"
   :countries:
     - "US"
     - "KR"
