--- a/spec/fixtures/tariff_rates/australia/results.yaml
+++ b/spec/fixtures/tariff_rates/australia/results.yaml
@@ -1,14 +1,15 @@
 ---
-- :source_id: "439058"
+- :id: "ac4e9c0429825d3555eb373820634fd06cd03967"
+  :source_id: "439058"
   :tariff_line: "01011000"
   :description: "Live purebred breeding horses and asses"
   :hs_6: "010110"
   :sector_code: "15"
   :base_rate: "0"
-  :base_rate_alt: "null"
+  :base_rate_alt: "nil"
   :final_year: "2012"
   :tariff_lines_per_6_digit: "1"
-  :tariff_rate_quota: "null"
+  :tariff_rate_quota: "nil"
   :tariff_rate_quota_note: "For more information, please see the U.S. Department of Agriculture's Agricultural Tariff Tracker."
   :tariff_eliminated: "true"
   :product_type_id: "2"
@@ -20,50 +21,39 @@
   :staging_basket_id: "6"
   :num_mar_columns: "10"
   :partner_start_year: "2012"
-  :reporter_start_year: "null"
+  :reporter_start_year: "nil"
   :partner_agreement_name: "AU"
   :reporter_agreement_name: "US"
   :partner_agreement_approved: "true"
-  :reporter_agreement_approved: "null"
+  :reporter_agreement_approved: "nil"
   :rule_text: "A change to heading 01.01 through 01.06 from any other chapter."
-  :link_text: "null"
-  :link_url: "null"
-  :quota_name: "null"
+  :link_text: "nil"
+  :link_url: "nil"
+  :quota_name: "nil"
   :industry: "Agricultural"
   :annual_rates:
-    -
-      - "y2012"
-      - "10"
-    -
-      - "y2013"
-      - "20"
-    -
-      - "y2014"
-      - "30"
+    y2012: "10"
+    y2013: "20"
+    y2014: "30"
   :alt_annual_rates:
-    -
-      - "alt_2012"
-      - "1"
-    -
-      - "alt_2013"
-      - "2"
-    -
-      - "alt_2014"
-      - "3"
+    alt_2012: "1"
+    alt_2013: "2"
+    alt_2014: "3"
   :countries:
     - "US"
     - "AU"
   :source: "AUSTRALIA"
-- :source_id: "439227"
+- :id: 4ca184467eeab101868af9af3e68081dc62d5c67
+  :source_id: "439227"
   :tariff_line: "0102102000"
   :description: "Beef cattle"
   :hs_6: "010210"
   :sector_code: "15"
   :base_rate: "89.1"
-  :base_rate_alt: "null"
+  :base_rate_alt: "nil"
   :final_year: "2012"
   :tariff_lines_per_6_digit: "3"
-  :tariff_rate_quota: "null"
+  :tariff_rate_quota: "nil"
   :tariff_rate_quota_note: "For more information, please see the U.S. Department of Agriculture's Agricultural Tariff Tracker."
   :tariff_eliminated: "true"
   :product_type_id: "2"
@@ -74,51 +64,36 @@
   :staging_basket: "Immediate"
   :staging_basket_id: "6"
   :num_mar_columns: "10"
-  :partner_start_year: "null"
+  :partner_start_year: "nil"
   :reporter_start_year: "2012"
   :partner_agreement_name: "US"
   :reporter_agreement_name: "AU"
-  :partner_agreement_approved: "null"
+  :partner_agreement_approved: "nil"
   :reporter_agreement_approved: "true"
   :rule_text: "A change to heading 01.01 through 01.06 from any other chapter."
-  :link_text: "null"
-  :link_url: "null"
-  :quota_name: "null"
+  :link_text: "nil"
+  :link_url: "nil"
+  :quota_name: "nil"
   :industry: "Agricultural"
   :annual_rates:
-    -
-      - "y2012"
-      - "null"
-    -
-      - "y2013"
-      - "null"
-    -
-      - "y2014"
-      - "null"
-  :alt_annual_rates:
-    -
-      - "alt_2012"
-      - "null"
-    -
-      - "alt_2013"
-      - "null"
-    -
-      - "alt_2014"
-      - "null"
+    y2012: "100"
+    y2013: "200"
+  :alt_annual_rates: {}
   :countries:
     - "US"
     - "AU"
   :source: "AUSTRALIA"
-- :source_id: "441638"
+- :id: "98d78f8c3a5147d4914461b51c89abe34c20aed2"
+  :source_id: "441638"
   :tariff_line: "02050000"
   :description: "Meat of horses, asses, mules or hinnies, fresh, chilled or frozen"
   :hs_6: "020500"
   :sector_code: "17"
   :base_rate: "0"
-  :base_rate_alt: "null"
+  :base_rate_alt: "nil"
   :final_year: "2012"
   :tariff_lines_per_6_digit: "1"
-  :tariff_rate_quota: "null"
+  :tariff_rate_quota: "nil"
   :tariff_rate_quota_note: "For more information, please see the U.S. Department of Agriculture's Agricultural Tariff Tracker."
   :tariff_eliminated: "true"
   :product_type_id: "2"
@@ -130,36 +105,20 @@
   :staging_basket_id: "6"
   :num_mar_columns: "10"
   :partner_start_year: "2012"
-  :reporter_start_year: "null"
+  :reporter_start_year: "nil"
   :partner_agreement_name: "AU"
   :reporter_agreement_name: "US"
   :partner_agreement_approved: "true"
-  :reporter_agreement_approved: "null"
+  :reporter_agreement_approved: "nil"
   :rule_text: "A change to heading 02.01 through 02.10 from any other chapter except from fowls of the species Gallus domesticus (chickens) of heading 01.05."
-  :link_text: "null"
-  :link_url: "null"
-  :quota_name: "null"
+  :link_text: "nil"
+  :link_url: "nil"
+  :quota_name: "nil"
   :industry: "Agricultural"
-  :annual_rates:
-    -
-      - "y2012"
-      - "null"
-    -
-      - "y2013"
-      - "null"
-    -
-      - "y2014"
-      - "null"
+  :annual_rates: {}
   :alt_annual_rates:
-    -
-      - "alt_2012"
-      - "null"
-    -
-      - "alt_2013"
-      - "null"
-    -
-      - "alt_2014"
-      - "null"
+    alt_2013: "300"
+    alt_2014: "400"
   :countries:
     - "US"
     - "AU"
