--- a/spec/fixtures/tariff_rates/korea/results.yaml
+++ b/spec/fixtures/tariff_rates/korea/results.yaml
@@ -1,15 +1,15 @@
 ---
-- :id: "9a0d7ba2838cd6c1d1a1432d4ad967c2762a30c6"
+- :id: "61e849d0e5361ab0d1b6e490c35cf2f4d1309b70"
   :source_id: "439058"
   :tariff_line: "1011000"
   :description: "Live purebred breeding horses and asses"
   :hs_6: "10110"
   :sector_code: "15"
   :base_rate: "0"
-  :base_rate_alt: "nil"
+  :base_rate_alt:   
   :final_year: "2012"
   :tariff_lines_per_6_digit: "1"
-  :tariff_rate_quota: "nil"
+  :tariff_rate_quota:   
   :tariff_rate_quota_note: "For more information, please see the U.S. Department of Agriculture's Agricultural Tariff Tracker."
   :tariff_eliminated: "true"
   :product_type_id: "2"
@@ -21,15 +21,15 @@
   :staging_basket_id: "6"
   :num_mar_columns: "10"
   :partner_start_year: "2012"
-  :reporter_start_year: "nil"
+  :reporter_start_year:   
   :partner_agreement_name: "KR"
   :reporter_agreement_name: "US"
   :partner_agreement_approved: "true"
-  :reporter_agreement_approved: "nil"
+  :reporter_agreement_approved:   
   :rule_text: "A change to heading 01.01 through 01.06 from any other chapter."
-  :link_text: "nil"
-  :link_url: "nil"
-  :quota_name: "nil"
+  :link_text:   
+  :link_url:   
+  :quota_name:   
   :industry: "Agricultural"
   :annual_rates:
     y2012: "10"
