Adjust CSL fixtures to match latest tweaks.

--- a/spec/fixtures/screening_lists/dtc/results.yaml
+++ b/spec/fixtures/screening_lists/dtc/results.yaml
@@ -1,6 +1,5 @@
 ---
-- :remarks: 
-  :name: Juwhan Yun
+- :name: Juwhan Yun
   :alt_names: []
   :start_date: '1989-09-18'
   :federal_register_notice: 57 FR 1296
@@ -10,8 +9,7 @@
   :source_list_url: http://www.pmddtc.state.gov/compliance/debar.html
   :source_information_url: http://www.pmddtc.state.gov/compliance/debar_intro.html
   :id: 1857dfc050bc7adea46922f09996649de18495d7
-- :remarks: 
-  :name: Dilligas Trading Co., Inc.
+- :name: Dilligas Trading Co., Inc.
   :alt_names: []
   :start_date: '1991-12-13'
   :federal_register_notice: 57 FR 37184
@@ -19,8 +17,7 @@
   :source_list_url: http://www.pmddtc.state.gov/compliance/debar.html
   :source_information_url: http://www.pmddtc.state.gov/compliance/debar_intro.html
   :id: afd9dbfe97d679d161eaed68203399296abf631c
-- :remarks: 
-  :name: Brian Joseph Fleming
+- :name: Brian Joseph Fleming
   :alt_names:
   - Brian Joseph McSulla
   :start_date: '1990-07-03'
@@ -29,8 +26,7 @@
   :source_list_url: http://www.pmddtc.state.gov/compliance/debar.html
   :source_information_url: http://www.pmddtc.state.gov/compliance/debar_intro.html
   :id: ba449382749d0c16fd862d7b3da698fb65b5d7aa
-- :remarks: 
-  :name: John Smith
+- :name: John Smith
   :alt_names:
   - Brian Smith
   :start_date: '1990-12-01'
